--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 main {
-  max-width: 25em;
+  max-width: 37em;
   margin: auto;
 }
 
@@ -21,6 +21,11 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   margin: 0;
+}
+
+h1 a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .lede {
