--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:800|Lato|Lato:600");
 
+:root {
+  --div-color:#003181;
+}
+
 body {
   margin: 2em;
   font: 12pt/1.3 "Lato", sans-serif;
@@ -31,14 +35,21 @@ h1 a {
 .lede {
   text-align: center;
   padding: 1em;
-  border: 1px solid #003181;
+  border: 1px solid var(--div-color);
   border-width: 1px 0 1px 0;
 }
+
+.image {
+  width: 250px;
+}
+
 a {
   color: #003181;
 }
 
 .project {
+  border: 1px solid var(--div-color);
+  border-width: 0px 0 1px 0;
   margin-bottom: 2em;
 }
 
